--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "f5-kata_anio_bisiesto",
   "version": "1.0.0",
   "description": "",
-  "main": "anioBisiesto.js",
+  "main": "leapYear.js",
   "directories": {
     "test": "tests"
   },
